# BeeLine

./: CMakeLists.txt  README.md
data/: test_invalido.csv  test_semicolon.csv  test_valido.csv
docs/: Notas.md
docs/HU/: HU1.md  HU2.md
src/: BeeLine.cpp  BeeLine.h  Controlador.cpp  Controlador.h  beeline  main.cpp
src/IO/: CSVReader.cpp  CSVReader.h
src/Modelo/: Arista.h  Grafo.cpp  Grafo.h
src/Utils/: Parametros.h  ParserArgs.cpp  ParserArgs.h
tests/: test_csv.cpp  test_parser.cpp
